--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,6 +22,7 @@ COPY --from=build /opt/app/src ./src
 COPY --from=build /opt/app/public ./public
 COPY --from=build /opt/app/database ./database
 COPY --from=build /opt/app/build ./build
+COPY --from=build /opt/app/favicon.png ./favicon.png
 
 RUN addgroup -S strapi && adduser -S strapi -G strapi
 RUN mkdir -p /opt/app/public/uploads && chown -R strapi:strapi /opt/app
