Update Supabase pooler configuration

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,11 @@ HOST=0.0.0.0
 PORT=1337
 
 DATABASE_CLIENT=postgres
-DATABASE_HOST=aws-0-eu-central-1.pooler.supabase.com
-DATABASE_PORT=6543
-DATABASE_NAME=postgres
-DATABASE_USERNAME=postgres.vrmlvrimahyrqusheyaf
+DATABASE_HOST=
+DATABASE_PORT=5432
+DATABASE_NAME=
+DATABASE_USERNAME=
 DATABASE_PASSWORD=
-DATABASE_SSL=true
 
 JWT_SECRET=
 ADMIN_JWT_SECRET=
