Fix database config: use DATABASE_URL to avoid IPv6 issues

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,10 @@ HOST=0.0.0.0
 PORT=1337
 
 DATABASE_CLIENT=postgres
-DATABASE_HOST=
-DATABASE_PORT=5432
-DATABASE_NAME=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-
-JWT_SECRET=
+DATABASE_URL=postgresql://postgres.vrmlvrimahyrqusheyaf:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
 ADMIN_JWT_SECRET=
 APP_KEYS=
 API_TOKEN_SALT=
 TRANSFER_TOKEN_SALT=
 ENCRYPTION_KEY=
+JWT_SECRET=
