--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,6 +13,7 @@ FROM node:lts-alpine AS runtime
 WORKDIR /opt/app
 
 ENV NODE_ENV=production
+ENV NODE_OPTIONS="--dns-result-order=ipv4first"
 
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile --production
