--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 NODE_ENV=production
 HOST=0.0.0.0
 PORT=1337
+PUBLIC_URL=https://strapi.example.com
+ADMIN_URL=/admin
 
-DATABASE_CLIENT=postgres
-DATABASE_URL=postgresql://postgres.vrmlvrimahyrqusheyaf:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+APP_KEYS=key1,key2,key3,key4
+JWT_SECRET=
 ADMIN_JWT_SECRET=
-APP_KEYS=
 API_TOKEN_SALT=
 TRANSFER_TOKEN_SALT=
-ENCRYPTION_KEY=
-JWT_SECRET=
+
+DATABASE_CLIENT=postgres
+DATABASE_HOST=db.<project>.supabase.co
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=
+DATABASE_SSL=true
+DATABASE_SSL_REJECT_UNAUTHORIZED=false
