Update .env.example with complete env vars list

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,15 @@ HOST=0.0.0.0
 PORT=1337
 PUBLIC_URL=https://strapi.example.com
 ADMIN_URL=/admin
+NODE_OPTIONS=--dns-result-order=ipv4first
+STRAPI_TELEMETRY_DISABLED=true
 
 APP_KEYS=key1,key2,key3,key4
 JWT_SECRET=
 ADMIN_JWT_SECRET=
 API_TOKEN_SALT=
 TRANSFER_TOKEN_SALT=
+ENCRYPTION_KEY=
 
 DATABASE_CLIENT=postgres
 DATABASE_HOST=db.<project>.supabase.co
@@ -18,3 +21,9 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=
 DATABASE_SSL=true
 DATABASE_SSL_REJECT_UNAUTHORIZED=false
+
+SMTP_HOST=smtp.example.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=
+SMTP_PASS=
