Use Supabase Pooler (IPv4 only) + add curl for healthcheck

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,10 +10,11 @@ RUN yarn build
 
 FROM node:lts-alpine AS runtime
 
+RUN apk add --no-cache curl
+
 WORKDIR /opt/app
 
 ENV NODE_ENV=production
-ENV NODE_OPTIONS=--dns-result-order=ipv4first
 
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile --production
