--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ TRANSFER_TOKEN_SALT=
 ENCRYPTION_KEY=
 
 DATABASE_CLIENT=postgres
-DATABASE_HOST=db.<project>.supabase.co
-DATABASE_PORT=5432
+DATABASE_HOST=aws-0-eu-central-1.pooler.supabase.com
+DATABASE_PORT=6543
 DATABASE_NAME=postgres
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=
