--- a/.env.example
+++ b/.env.example
@@ -14,13 +14,16 @@ TRANSFER_TOKEN_SALT=
 ENCRYPTION_KEY=
 
 DATABASE_CLIENT=postgres
-DATABASE_HOST=aws-0-eu-central-1.pooler.supabase.com
-DATABASE_PORT=6543
-DATABASE_NAME=postgres
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=
-DATABASE_SSL=true
-DATABASE_SSL_REJECT_UNAUTHORIZED=false
+# Option 1: Use DATABASE_URL (recommended for pooler)
+DATABASE_URL=postgresql://postgres:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+# Option 2: Use individual vars
+# DATABASE_HOST=aws-0-eu-central-1.pooler.supabase.com
+# DATABASE_PORT=6543
+# DATABASE_NAME=postgres
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=
+# DATABASE_SSL=true
+# DATABASE_SSL_REJECT_UNAUTHORIZED=false
 
 SMTP_HOST=smtp.example.com
 SMTP_PORT=465
